fix: wrap ILM elements heading nicely on narrow screens

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -489,6 +489,10 @@ header.tg-page-header.tg-page-header--left-right {
 		height: 100px;
 		display: flex;
 		align-items: center;
+
+		@media screen and (max-width: 490px) {
+			clear: both;
+		}
 	}
 
 	p {
